# fw

./: .gitignore  COPYING  ChangeLog  Makefile.am.local  README  TODO  bootstrap  configure.ac.local
fw/: Makefile.am
fw-pkgin/: .gitignore  config
fw.local/: .gitignore  Makefile.am
fw.local/package/: Makefile.am
fw.local/package/deb/: detect
fw.local/package/rpm/: Makefile.am  detect
fw/m4/: Makefile.am  check_build_environment.m4
fw/package/: Makefile.am  check-for-pkgconfig-packages
fw/package/deb/: FwDebPackage.pm  Makefile.am  make-package
fw/package/rpm/: FwRpmPackage.pm  Makefile.am  canonicalize-package  check-build-environment  check-for-packages  dependency-closure  dependency-range  detect  dump-state  make-build-package  make-hook  make-package  release-package  rpm-version-compare
fw/revision/: Makefile.am  README
fw/revision/git/: .gitignore  Makefile.am  check-for-tag  detect  ignore-files  remove-files
fw/revision/none/: Makefile.am
fw/revision/see-vee-ess/: Makefile.am  add-files  ignore-files
fw/revision/svn/: Makefile.am  add-files  check-for-tag
fw/sh/: Makefile.am
fw/template/: Makefile.am
fw/template/fw-build/: Makefile.am
fw/template/fw-build/fw.local/: Makefile.am
fw/template/fw-template/: Makefile.am
fw/template/fw-template/fw.local/: Makefile.am
fw/template/fw-template/fw.local/template/: Makefile.am
fw/template/fw-template/fw.local/template/NAME/: Makefile.am
fw/template/fw-template/tests/: Makefile.am
fw/template/meta/: Makefile.am  bootstrap  init  load-config  make-dist  release-ok  source-install
fw/template/none/: Makefile.am  make-dist
fw/template/script/: Makefile.am  init
fw/template/script/tests/: Makefile.am
tests/: .gitignore  Makefile.am.local  test-canonicalize-package  test-canonicalize-version  test-cvs.in  test-git  test-git.in  test-svn  test-svn.in  test-template-fw-build.in  test-template-fw-template.in  test-template-none.in  test-template-script.in  test-version-comparison
