mfourdir= $(prefix)/share/fw/m4

dist_mfour_DATA =		\
  arg_var.m4			\
  build_automake.m4		\
  check_build_environment.m4	\
  detect_native_package.m4	\
  detect_revision.m4		\
  subst_protect.m4		\
  template_fw_build.m4		\
  template_fw_template.m4	\
  template_script.m4

MAINTAINERCLEANFILES = 		\
  Makefile.in

include $(top_srcdir)/fw/build/automake/gnu-make-check.am
